--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cancerpedia</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cancer_text">Cancer</string>
+    <string name="cancer_description">Cancer</string>
 </resources>
