--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cancer_text">Cancer</string>
     <string name="cancer_description">Cancer</string>
+    <string name="simon_was_here">Simon was here</string>
 </resources>
